--- a/package.json
+++ b/package.json
@@ -3,25 +3,40 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --port 8081",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.2",
+    "@prisma/client": "^3.13.0",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
+    "@types/react-native-vector-icons": "^6.4.10",
+    "apollo-datasource-rest": "^3.5.2",
+    "apollo-server": "^3.6.7",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "graphql": "^16.4.0",
+    "prisma": "^3.13.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-native": "0.64.3",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
+    "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "typescript": "~4.3.5"
+  },
+  "resolutions": {
+    "@types/react": "~17.0.21"
   },
   "private": true
 }
