--- a/package.json
+++ b/package.json
@@ -3,28 +3,28 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start --port 8081",
+    "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "server": "ts-node server/index.ts",
+    "react-devtools": "react-devtools"
   },
   "dependencies": {
-    "@apollo/client": "^3.6.2",
-    "@prisma/client": "^3.13.0",
+    "@apollo/client": "3.5.4",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
-    "@types/react-native-vector-icons": "^6.4.10",
-    "apollo-datasource-rest": "^3.5.2",
-    "apollo-server": "^3.6.7",
     "expo": "~44.0.0",
+    "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
-    "graphql": "^16.4.0",
-    "prisma": "^3.13.0",
+    "graphql": "16.3.0",
+    "mongodb": "^4.6.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.64.3",
+    "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-vector-icons": "^9.1.0",
@@ -33,6 +33,8 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react-native": "~0.64.12",
+    "@types/react-native-vector-icons": "^6.4.10",
+    "react-devtools": "^4.24.6",
     "typescript": "~4.3.5"
   },
   "resolutions": {
