--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://handleryouth:1234@cluster-tutorial.annxh.mongodb.net/personal-portofolio?retryWrites=true&w=majority"
+
+RESUME_LINK="https://handleryouth.xyz/"
