--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "~44.0.0",
     "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.7",
     "graphql": "16.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -34,18 +35,18 @@
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "react-native-dotenv": "^3.3.1",
+    "@babel/core": "^7.12.9",
+    "@types/react-native": "~0.64.12",
+    "@types/react-native-dotenv": "^0.2.0",
+    "@types/react-native-vector-icons": "^6.4.10",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
     "eslint": "^8.15.0",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-plugin-react-native": "^4.0.0",
-    "@babel/core": "^7.12.9",
-    "@types/react-native": "~0.64.12",
-    "@types/react-native-dotenv": "^0.2.0",
-    "@types/react-native-vector-icons": "^6.4.10",
     "react-devtools": "^4.24.6",
+    "react-native-dotenv": "^3.3.1",
     "typescript": "~4.3.5"
   },
   "resolutions": {
