--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "format": "prettier --write ./src",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "lint": "eslint  ./ --ext js,jsx,ts,tsx",
+    "fix": "yarn format && yarn lint --fix",
     "eject": "expo eject",
     "server": "ts-node server/index.ts",
-    "react-devtools": "react-devtools"
+    "react-devtools": "react-devtools",
+    "dev": " yarn fix &&  yarn start "
   },
   "dependencies": {
     "@apollo/client": "3.5.4",
@@ -45,6 +49,8 @@
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-plugin-react-native": "^4.0.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "prettier": "2.6.2",
     "react-devtools": "^4.24.6",
     "react-native-dotenv": "^3.3.1",
     "typescript": "~4.3.5"
