--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "rn-project1",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/icon-logo.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
